# Covariance_kernel

./: CMakeLists.txt  README.md
examples/: complex_cov.cu
include/: complex_covariance.cuh
src/: complex_covariance.cu
